updated styles for warenkorb container to fix overflowing of total div

--- a/src/public/styles/warenkorb.css
+++ b/src/public/styles/warenkorb.css
@@ -11,12 +11,16 @@
     background-color: white;
     width: 80%;
     max-width: 600px;
-    padding: 30px 20px;
+    padding: 30px 6%;
     /* Increased padding to avoid overlap */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Bestellübersicht */
@@ -171,6 +175,10 @@
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
+    border-bottom: 2px solid black;
+    margin-bottom: 5%;
+    width: 100%; /* Ensure it takes the full width of the container */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 .total-label {
